# snapshottable

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-plz.yml
src/: lib.rs
tests/: clone-safe.rs  store.rs
